kubernetes/connection/resources/gateway.crd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations:
    cert-manager.io/issuer: ca-issuer
spec:
  gatewayClassName: cilium
  listeners:
  - name: argocd-gateway-listener-http
    protocol: HTTP
    port: 80
    hostname: "argocd.localhost"
  - name: argocd-gateway-listener-https
    protocol: HTTPS
    port: 443
    hostname: "argocd.localhost"
    tls:
      certificateRefs:
      - kind: Secret
        name: ca
