kubernetes/connection/resources/connection.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  # annotations:
  #   cert-manager.io/issuer: cert-manager-issuer
spec:
  gatewayClassName: cilium
  listeners:
  - hostname: "argocd.localhost"
    port: 443
    name: https-1
    protocol: HTTPS
    allowedRoutes:
      namespaces: 
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: ca
    
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-app-route-1
spec:
  parentRefs:
  - name: tls-gateway
  hostnames:
  - "argocd.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /details
    backendRefs:
    - name: argocd-server
      port: 8080
